--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/rwtourdot">View on GitHub</a>
 
           <h1 id="project_title">rwtourdot.github.io</h1>
-          <h2 id="project_tagline">webpage3</h2>
+          <h2 id="project_tagline"> </h2> <!-- webpage -->
 
         </header>
     </div>
