--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/rwtourdot">View on GitHub</a>
 
-          <h1 id="project_title">rwtourdot.github.io</h1>
+          <h1 id="project_title">rick tourdot</h1>
           <h2 id="project_tagline"> </h2> <!-- webpage -->
 
         </header>
