--- a/index.html
+++ b/index.html
@@ -59,13 +59,11 @@
     </div>
 
     <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
+    <!-- <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <!-- <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p> -->
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-
-
+     -->
   </body>
 </html>
