--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <footer class="inner">
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
-    </div>
-     -->
+    </div> -->
+
   </body>
 </html>
