--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!-- <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p> -->
 
-<ul> <li> thing thing </li> <li> thing thing2 </li> </ul>
+<ul> <li> , and Riggleman, R.A. (2015). The dynamics of unentangled polymers during capillary rise infiltration into a nanoparticle packing.   </li> <li> thing thing2 </li> </ul>
 
 <!-- <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
