--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
+<embed src="images/adg.avi"/>
+
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
 
 <!-- <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p> -->
 
-<ul> <li> <span class ="me"> dfsfdfs </span>, and . <em> Phys. Rev. E. </em> (42), 5-8. <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.90.022717"> [link] </a> </li>
+<ul> <li> <span class ="me"> dfsfdfs </span>, and . (2015) <em> Phys. Rev. E. </em> (42), 5-8. <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.90.022717"> [link] </a> </li>
 <li> thing thing2 </li> </ul>
 
 <!-- <h3>
