--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+    <script src="http://api.html5media.info/1.1.8/html5media.min.js"></script>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="rwtourdot.github.io : webpage">
