--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>This </p>
 
-<video src="./images/sample.mp4" width="320" height="200" controls preload> </video>
+<video src="images/sample.mp4" width="320" height="200" controls preload> </video>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
