--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
 <!-- <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p> -->
 
-<ul> <li> <span class ="me"> R. W. Tourdot </span>, N. Ramakrishnan, T. Baumgart, and R. Radhakrishnan, Application of a Free Energy Landscape Approach to Study Tension Dependent Bilayer Tubulation Mediated by Curvature Inducing Proteins. (2015)  <em> Phys. Rev. E. </em> 92, 042715 <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.92.042715"> [link] </a> </li> 
+<ul> <li> <span class ="me"> R. W. Tourdot </span>, N. Ramakrishnan, T. Baumgart, and R. Radhakrishnan, Application of a Free Energy Landscape Approach to Study Tension Dependent Bilayer Tubulation Mediated by Curvature Inducing Proteins. (2015)  <em> Phys. Rev. E. </em> 92, 042715 <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.92.042715"> [link] </a> </li>
 
 <li> <span class ="me"> R. W. Tourdot </span>, R. P. Bradley, N. Ramakrishnan, and R. Radhakrishnan, (2014) Multiscale computational models in physical systems biology of intracellular trafficking. <em> IET Systems Biology </em> 8(5) 198-213. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4336166/"> [link] </a> </li>
 
 <li> <span class ="me"> R. W. Tourdot </span>, N. Ramakrishnan, and R. Radhakrishnan, Defining the free-energy landscape of curvature-inducing proteins on membrane bilayers. (2014) <em> Phys. Rev. E. </em> 90, 022717 <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.90.022717"> [link] </a> </li>
 
-<li> <span class ="me"> R. W. Tourdot </span>, R. P. Bradley, N. Ramakrishnan, and R. Radhakrishnan, (2014) Multiscale computational models in physical systems biology of intracellular trafficking. <em> IET Systems Biology </em> 8(5) 198-213. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4336166/"> [link] </a> </li>
+<li> D. R. Slochower, Y. Wang, <span class ="me"> R. W. Tourdot </span>, R. Radhakrishnan, and P. A. Janmey, (2014) Counterion-mediated pattern formation in membranes containing anionic lipids. <em> Advances in Colloid and Interface Science </em> 208 177-188. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4369760/"> [link] </a> </li>
 </ul>
 
 <!-- <h3>
