--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <li> <span class ="me"> R. W. Tourdot </span>, N. Ramakrishnan, and R. Radhakrishnan, Defining the free-energy landscape of curvature-inducing proteins on membrane bilayers. (2014) <em> Phys. Rev. E. </em> 90, 022717 <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.90.022717"> [link] </a> </li>
 
-<li> D. R. Slochower, Y. Wang, <span class ="me"> R. W. Tourdot </span>, R. Radhakrishnan, and P. A. Janmey, (2014) Counterion-mediated pattern formation in membranes containing anionic lipids. <em> Advances in Colloid and Interface Science </em> 208 177-188. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4369760/"> [link] </a> </li>
+<li> D. R. Slochower, Y. Wang, <span class ="me"> R. W. Tourdot </span>, R. Radhakrishnan, and P. A. Janmey, Counterion-mediated pattern formation in membranes containing anionic lipids. (2014) <em> Advances in Colloid and Interface Science </em> 208 177-188. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4369760/"> [link] </a> </li>
 </ul>
 
 <!-- <h3>
