--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 <li> <span class ="me"> R. W. Tourdot </span>, N. Ramakrishnan, and R. Radhakrishnan, Defining the free-energy landscape of curvature-inducing proteins on membrane bilayers. (2014) <em> Phys. Rev. E. </em> 90, 022717 <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.90.022717"> [link] </a> </li>
 
 <li> D. R. Slochower, Y. Wang, <span class ="me"> R. W. Tourdot </span>, R. Radhakrishnan, and P. A. Janmey, Counterion-mediated pattern formation in membranes containing anionic lipids. (2014) <em> Advances in Colloid and Interface Science </em> 208 177-188. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4369760/"> [link] </a> </li>
+
+<li> J. Liu, <span class ="me"> R. Tourdot </span>, V. Ramanan, N. J. Agrawal and R. Radhakrishnan, Mesoscale Modeling and Simulations of Spatial Partitioning of Curvature Inducing Proteins under the Influence of Mean Curvature Fields in Bilayer Membranes. (2012) <em> Molecular Physics </em> 110(11-12), 1127-1137. <a href="http://www.tandfonline.com/doi/full/10.1080/00268976.2012.664661"> [link] </a> </li>
 </ul>
 
 <!-- <h3>
