--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 <li> D. R. Slochower, Y. Wang, <span class ="me"> R. W. Tourdot </span>, R. Radhakrishnan, and P. A. Janmey, Counterion-mediated pattern formation in membranes containing anionic lipids. (2014) <em> Advances in Colloid and Interface Science </em> 208 177-188. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4369760/"> [link] </a> </li>
 
 <li> J. Liu, <span class ="me"> R. Tourdot </span>, V. Ramanan, N. J. Agrawal and R. Radhakrishnan, Mesoscale Modeling and Simulations of Spatial Partitioning of Curvature Inducing Proteins under the Influence of Mean Curvature Fields in Bilayer Membranes. (2012) <em> Molecular Physics </em> 110(11-12), 1127-1137. <a href="http://www.tandfonline.com/doi/full/10.1080/00268976.2012.664661"> [link] </a> </li>
+
+<li> M. C. Linak, <span class ="me"> R. Tourdot </span>, K. D. Dorfman, Moving Beyond Watson-Crick models of coarse grained DNA dynamics. (2011) <em> J. Chem. Phys. </em> 135 205102. <a href="http://scitation.aip.org/content/aip/journal/jcp/135/20/10.1063/1.3662137"> [link] </a> </li>
 </ul>
 
 <!-- <h3>
