--- a/index.html
+++ b/index.html
@@ -40,17 +40,20 @@
 
 <!-- <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p> -->
 
-<ul> <li> <span class ="me"> R. W. Tourdot </span>, N. Ramakrishnan, T. Baumgart, and R. Radhakrishnan, Application of a Free Energy Landscape Approach to Study Tension Dependent Bilayer Tubulation Mediated by Curvature Inducing Proteins. (2015)  <em> Phys. Rev. E. </em> 92, 042715 <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.92.042715"> [link] </a> </li>
+<ul>
+<li> N. Ramakrishnan, <span class ="me"> R. W. Tourdot</span> R. Radhakrishnan, Thermodynamic Free Energy Methods to Investigate Shape Transitions In Bilayer Membranes. (2016)  <em> Int. J. Adv. Eng. Sci. & Appl. Math. </em> 92, 042715 <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.92.042715"> [link] </a> </li>
 
-<li> <span class ="me"> R. W. Tourdot </span>, R. P. Bradley, N. Ramakrishnan, and R. Radhakrishnan, (2014) Multiscale computational models in physical systems biology of intracellular trafficking. <em> IET Systems Biology </em> 8(5) 198-213. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4336166/"> [link] </a> </li>
+<li> <span class ="me"> R. W. Tourdot</span>, N. Ramakrishnan, T. Baumgart, and R. Radhakrishnan, Application of a Free Energy Landscape Approach to Study Tension Dependent Bilayer Tubulation Mediated by Curvature Inducing Proteins. (2015)  <em> Phys. Rev. E. </em> 92, 042715 <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.92.042715"> [link] </a> </li>
 
-<li> <span class ="me"> R. W. Tourdot </span>, N. Ramakrishnan, and R. Radhakrishnan, Defining the free-energy landscape of curvature-inducing proteins on membrane bilayers. (2014) <em> Phys. Rev. E. </em> 90, 022717 <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.90.022717"> [link] </a> </li>
+<li> <span class ="me"> R. W. Tourdot</span>, R. P. Bradley, N. Ramakrishnan, and R. Radhakrishnan, (2014) Multiscale computational models in physical systems biology of intracellular trafficking. <em> IET Systems Biology </em> 8(5) 198-213. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4336166/"> [link] </a> </li>
 
-<li> D. R. Slochower, Y. Wang, <span class ="me"> R. W. Tourdot </span>, R. Radhakrishnan, and P. A. Janmey, Counterion-mediated pattern formation in membranes containing anionic lipids. (2014) <em> Advances in Colloid and Interface Science </em> 208 177-188. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4369760/"> [link] </a> </li>
+<li> <span class ="me"> R. W. Tourdot</span>, N. Ramakrishnan, and R. Radhakrishnan, Defining the free-energy landscape of curvature-inducing proteins on membrane bilayers. (2014) <em> Phys. Rev. E. </em> 90, 022717 <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.90.022717"> [link] </a> </li>
 
-<li> J. Liu, <span class ="me"> R. Tourdot </span>, V. Ramanan, N. J. Agrawal and R. Radhakrishnan, Mesoscale Modeling and Simulations of Spatial Partitioning of Curvature Inducing Proteins under the Influence of Mean Curvature Fields in Bilayer Membranes. (2012) <em> Molecular Physics </em> 110(11-12), 1127-1137. <a href="http://www.tandfonline.com/doi/full/10.1080/00268976.2012.664661"> [link] </a> </li>
+<li> D. R. Slochower, Y. Wang, <span class ="me"> R. W. Tourdot</span>, R. Radhakrishnan, and P. A. Janmey, Counterion-mediated pattern formation in membranes containing anionic lipids. (2014) <em> Advances in Colloid and Interface Science </em> 208 177-188. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4369760/"> [link] </a> </li>
 
-<li> M. C. Linak, <span class ="me"> R. Tourdot </span>, K. D. Dorfman, Moving Beyond Watson-Crick models of coarse grained DNA dynamics. (2011) <em> J. Chem. Phys. </em> 135 205102. <a href="http://scitation.aip.org/content/aip/journal/jcp/135/20/10.1063/1.3662137"> [link] </a> </li>
+<li> J. Liu, <span class ="me"> R. Tourdot</span>, V. Ramanan, N. J. Agrawal and R. Radhakrishnan, Mesoscale Modeling and Simulations of Spatial Partitioning of Curvature Inducing Proteins under the Influence of Mean Curvature Fields in Bilayer Membranes. (2012) <em> Molecular Physics </em> 110(11-12), 1127-1137. <a href="http://www.tandfonline.com/doi/full/10.1080/00268976.2012.664661"> [link] </a> </li>
+
+<li> M. C. Linak, <span class ="me"> R. Tourdot</span>, K. D. Dorfman, Moving Beyond Watson-Crick models of coarse grained DNA dynamics. (2011) <em> J. Chem. Phys. </em> 135 205102. <a href="http://scitation.aip.org/content/aip/journal/jcp/135/20/10.1063/1.3662137"> [link] </a> </li>
 </ul>
 
 <!-- <h3>
