--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <!-- <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p> -->
 
 <ul>
+<li> N. Ramakrishnan, <span class ="me"> R. W. Tourdot</span>, D. M. Eckmann, P. S. Ayyaswamy, V. R. Muzykantov, R. Radhakrishnan, Biophysically inspired model for functionalized nanocarrier adhesion to cell surface: roles of protein expression and mechanical factors. (2016)  <em> R. Soc. Open. Sci. </em> in press </li>
+
 <li> N. Ramakrishnan, <span class ="me"> R. W. Tourdot</span>, R. Radhakrishnan, Thermodynamic Free Energy Methods to Investigate Shape Transitions In Bilayer Membranes. (2016)  <em> Int. J. Adv. Eng. Sci. & Appl. Math. </em> <a href="http://arxiv.org/abs/1510.02940"> [link] </a> </li>
 
 <li> <span class ="me"> R. W. Tourdot</span>, N. Ramakrishnan, T. Baumgart, and R. Radhakrishnan, Application of a Free Energy Landscape Approach to Study Tension Dependent Bilayer Tubulation Mediated by Curvature Inducing Proteins. (2015)  <em> Phys. Rev. E. </em> 92, 042715 <a href="http://journals.aps.org/pre/abstract/10.1103/PhysRevE.92.042715"> [link] </a> </li>
