--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h3>
 
 <p>This </p>
-
+<!--
 <video src="images/sample.mp4" width="320" height="200" controls preload> </video>
+
+<video width="100%" controls>
+<source src="/simulator/dropspot/simulation-v00025/v01-look/video.licorice.webm" type="video/mp4">
+your browser does not support the video tag
+</video>
+-->
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
@@ -72,6 +78,17 @@
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
+
+
+<style>
+ul { overflow:hidden; list-style-type:square; }
+li { margin:0 20px; float:left; width:auto; }
+</style>
+
+<ul>
+<li>rick the guy over there</li>
+<li>is</li>
+<li>awesome</li>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
