--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@ li { margin:0 20px; float:left; width:auto; }
 </style>
 
 <ul>
-<li>rick the guy over there</li>
-<li>is</li>
+<li><a href="https://github.com/rwtourdot"> github </a></li>
+<li>email: <a href="mailto:rwtourdot@gmail.com" target="_top">rwtourdot@gmail.com</a>
+</p></li>
 <li>awesome</li>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
     </div>
 
