--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@ li { margin:0 20px; float:left; width:auto; }
 </style>
 
 <ul>
+<li>email: <a href="mailto:rwtourdot@gmail.com" target="_top">rwtourdot@gmail.com</a> </li>
 <li><a href="https://github.com/rwtourdot"> github </a></li>
-<li>email: <a href="mailto:rwtourdot@gmail.com" target="_top">rwtourdot@gmail.com</a>
-</p></li>
 <li>awesome</li>
 
       </section>
