--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ li { margin:0 20px; float:left; width:auto; }
 <ul>
 <li>email: <a href="mailto:rwtourdot@gmail.com" target="_top">rwtourdot@gmail.com</a> </li>
 <li><a href="https://github.com/rwtourdot"> github </a></li>
-<li>awesome</li>
-
+<li><a href="https://www.linkedin.com/in/richard-tourdot-3aa14b119
+" target="_top">linkedin</a> </li>
       </section>
     </div>
 
