--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ li { margin:0 20px; float:left; width:auto; }
 <li><a href="https://github.com/rwtourdot"> github </a></li>
 <li><a href="https://www.linkedin.com/in/richard-tourdot-3aa14b119
 " target="_top">linkedin</a> </li>
-<li>Resume: <a href="files/resume-2016.pdf" target="_top">[link]</a> </li>
+<li>Resume: <a href="files/resume-2016.pdf" target="_blank">PDF</a> </li>
       </section>
     </div>
 
