--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h3>
 
 <p>This </p>
+
+<div class="container">
+  <div class="left">tjen<br>a</div>
+  <div class="right">tjen<br>a</div>
+</div>
 <!--
 <video src="images/sample.mp4" width="320" height="200" controls preload> </video>
 
