--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="container">
   <div class="left">tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
-  <div class="right">tjen<br>a</div>
+  <div class="right">tjen tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
 </div>
 <!--
 <video src="images/sample.mp4" width="320" height="200" controls preload> </video>
