--- a/index.html
+++ b/index.html
@@ -38,16 +38,15 @@
   <div class="left">tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
   <div class="right">tjen tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
 </div>
--->
 
-<!--
+
+
 <video src="images/sample.mp4" width="320" height="200" controls preload> </video>
-
+-->
 <video width="100%" controls>
-<source src="/simulator/dropspot/simulation-v00025/v01-look/video.licorice.webm" type="video/mp4">
+<source src="/images/two_vesicles.webm" type="video/mp4">
 your browser does not support the video tag
 </video>
--->
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
