--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 </div>
 
 
-
-<video src="images/sample.mp4" width="320" height="200" controls preload> </video>
 -->
-<video width="100%" controls>
+<video src="/images/two_vesicles.webm" width="320" height="200" controls preload> </video>
+
+<video width="50%" controls>
 <source src="/images/two_vesicles.webm" type="video/mp4">
 your browser does not support the video tag
 </video>
