--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <video src="/images/two_vesicles.mp4" width="320" height="200" controls preload> </video>
 -->
 <video width="50%" controls>
-<source src="/images/two_vesicles.webm" type="video/mp4">
+<source src="two_vesicles.webm" type="video/mp4">
 your browser does not support the video tag
 </video>
 
