--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
 
 
 <video src="/images/two_vesicles.mp4" width="320" height="200" controls preload> </video>
--->
+
 <video width="50%" controls>
 <source src="two_vesicles.webm" type="video/mp4">
 your browser does not support the video tag
 </video>
+-->
+<img src="./images/endocytosis.png" alt="endocytosis">
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
