--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 your browser does not support the video tag
 </video>
 -->
-<img src="endocytosis.png" alt="endocytosis">
+<img src="endocytosis.jpg" alt="endocytosis">
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
