--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h3>
 
-<!--
+
 <p>This </p>
 
 <div class="container">
-  <div class="left">tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
-  <div class="right">tjen tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
+  <img src="images/endocytosis.png" alt="hi" class="inline"/>
+
 </div>
-
-
+<!--
+<div class="left">tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
+<div class="right">tjen tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
 
 <video src="/images/two_vesicles.mp4" width="320" height="200" controls preload> </video>
 
@@ -46,8 +47,11 @@
 <source src="two_vesicles.webm" type="video/mp4">
 your browser does not support the video tag
 </video>
--->
+
 <img src="endocytosis.jpg" alt="endocytosis">
+-->
+
+
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
