--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>This </p>
 
 <div class="container">
-  <img src="images/endocytosis.png" alt="hi" class="inline"/>
+  <img src="images/endocytosis.png" alt="hi" class="inline" width = "100%"/>
 
 </div>
 <!--
@@ -45,7 +45,7 @@
 
 -->
 
-<video width="50%" controls>
+<video width="100%" controls>
 <source src="two_vesicles.webm" type="video/mp4">
 your browser does not support the video tag
 </video>
