--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
 
 <p>This </p>
 
-<div class="container">
-  <img src="images/endocytosis.png" alt="hi" class="inline" width = "100%"/>
-
-</div>
+<img src="images/endocytosis.png" alt="hi" class="inline"/>
 <!--
 <div class="left">tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
 <div class="right">tjen tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
@@ -46,7 +43,7 @@
 -->
 
 <video width="100%" controls>
-<source src="two_vesicles.webm" type="video/mp4">
+<source src="images/two_vesicles.webm" type="video/mp4">
 your browser does not support the video tag
 </video>
 
