--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 your browser does not support the video tag
 </video>
 
+<img src="images/reticulin_nucleus_cutoff_0_93_10x_reticulin.png" alt="hi" class="inline"/>
+
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h3>
