--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>This </p>
 
-<img src="images/endocytosis.png" alt="hi" class="inline"/>
+<img src="images/endocytosis.png" alt="hi" class="inline" width="100%"/>
 <!--
 <div class="left">tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
 <div class="right">tjen tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
