--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 <p>This </p>
 
 <img src="images/endocytosis.png" alt="hi" class="inline" style="max-width:100%;"/>
+
 <!--
 <div class="left">tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
 <div class="right">tjen tjen  ljasklfsdfasdfasfhsldkfsdlfkhsdlfkhsdflskdhflsdkfadsadas lorem<br>a</div>
 
 <video src="/images/two_vesicles.mp4" width="320" height="200" controls preload> </video>
-
 -->
 
 <video width="100%" controls>
@@ -47,7 +47,7 @@
 your browser does not support the video tag
 </video>
 
-<img src="images/reticulin_nucleus_cutoff_0_93_10x_reticulin.png" alt="hi" class="inline"/>
+<img src="images/reticulin_nucleus_cutoff_0_93_10x_reticulin.png" alt="hi" class="inline" style="max-width:100%;"/>
 
 
 <h3>
