--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h3>
 
 
-<p>This </p>
+<h2>This </h2>
 
 <img src="images/endocytosis.png" alt="hi" class="inline" style="max-width:100%;"/>
 
