--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h4>
 
 
-<h3>This </h3>
+<h3>Curvature Induction in Cell Membranes </h3>
 
+<p> The development of a cell membrane model which captures transitions between critical morphological states, such as the formation of a budding vesicle in the process of endocytosis. </p>
 <img src="images/endocytosis.png" alt="hi" class="inline" style="max-width:100%;"/>
 
 <!--
