--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 <video src="/images/two_vesicles.mp4" width="320" height="200" controls preload> </video>
 -->
+<h3>Tension and the Forces between Cells </h3>
 
 <video width="100%" controls>
 <source src="images/two_vesicles.webm" type="video/mp4">
