--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 -->
 <h3>Tension and the Forces between Cells </h3>
 
+<p> The membrane proteins which hold the cell to both its cytoskeleton and the surrounding extracellular matrix can influence membrane properties including tension. </p>
+
 <video width="100%" controls>
 <source src="images/two_vesicles.webm" type="video/mp4">
 your browser does not support the video tag
