--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 -->
 <h3>Tension and the Forces between Cells </h3>
 
-<p> The membrane proteins which hold the cell to both its cytoskeleton and the surrounding extracellular matrix can influence membrane properties including tension. </p>
+<p> The integrin and adhesion proteins which hold the cell membrane to both its cytoskeleton and the surrounding extracellular matrix can influence membrane properties including tension. </p>
 
 <video width="100%" controls>
 <source src="images/two_vesicles.webm" type="video/mp4">
