--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 your browser does not support the video tag
 </video>
 
+
+<h3>Tissue Pressure: What can be learned from Histology? </h3>
+
 <img src="images/reticulin_nucleus_cutoff_0_93_10x_reticulin.png" alt="hi" class="inline" style="max-width:100%;"/>
 
 
