--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p> The integrin and adhesion proteins which hold the cell membrane to both its cytoskeleton and the surrounding extracellular matrix can influence membrane properties including tension. </p>
 
 <video width="100%" controls>
-<source src="images/two_vesicles.webm" type="video/mp4">
+<source src="images/two_vesicles_cut.webm" type="video/mp4">
 your browser does not support the video tag
 </video>
 
