--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@ your browser does not support the video tag
 </video>
 
 
-<h3>Tissue Pressure: what can be learned from histology? </h3>
+<h3>Tissue pressure: what can be learned from histology? </h3>
+
+<p> Stresses that arise in tissues due either as a product of a disase state or in the development of disease.  </p>
 
 <img src="images/reticulin_nucleus_cutoff_0_93_10x_reticulin.png" alt="hi" class="inline" style="max-width:100%;"/>
 
