--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <h3>Curvature Induction in Cell Membranes </h3>
 
-<p> The development of a cell membrane model which captures transitions between critical morphological states, such as the formation of a budding vesicle in the process of endocytosis. </p>
+<p> My research has included the development of a cell membrane model which can capture transitions between critical morphological states, such as the formation of a budding vesicle in the process of endocytosis. </p>
 <img src="images/endocytosis.png" alt="hi" class="inline" style="max-width:100%;"/>
 
 <!--
@@ -44,17 +44,16 @@
 -->
 <h3>Tension and the Forces between Cells </h3>
 
-<p> The integrin and adhesion proteins which hold the cell membrane to both its cytoskeleton and the surrounding extracellular matrix can influence membrane properties including tension. </p>
+<p> The adhesion proteins which hold the cell membrane to both its cytoskeleton and the surrounding extracellular matrix can influence membrane tension and possibly alter signalling and cell fate. </p>
 
 <video width="100%" controls>
 <source src="images/two_vesicles_cut.webm" type="video/mp4">
 your browser does not support the video tag
 </video>
 
-
 <h3>Tissue pressure: what can be learned computationally from histological slides ? </h3>
 
-<p> Stresses that arise in tissues either as a product of a disase state or in the development of disease can be seen through the packing of tissue features.  </p>
+<p> Stresses that arise in tissues either as a product of a disase state or in the development of disease may be seen through the packing of tissue features. </p>
 
 <img src="images/reticulin_nucleus_cutoff_0_93_10x_reticulin.png" alt="hi" class="inline" style="max-width:100%;"/>
 
