--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <video src="/images/two_vesicles.mp4" width="320" height="200" controls preload> </video>
 -->
-<h3>Tension and the Forces between Cells </h3>
+<h3>Membrane Tension and the Forces between Cells </h3>
 
 <p> The adhesion proteins which hold the cell membrane to both its cytoskeleton and the surrounding extracellular matrix can influence membrane tension and possibly alter signalling and cell fate. </p>
 
