--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h4>
 
 
-<h3>Curvature Induction in Cell Membranes </h3>
+<h3>Curvature Generation in Cell Membranes </h3>
 
-<p> My research has included the development of a cell membrane model which can capture transitions between critical morphological states, such as the formation of a budding vesicle in the process of endocytosis. </p>
+<p> My research has included the development of a cell membrane model which can capture transitions between morphological states due to membrane proteins which induce curvature, such as the formation of a budding vesicle in the cellular process of endocytosis. </p>
 <img src="images/endocytosis.png" alt="hi" class="inline" style="max-width:100%;"/>
 
 <!--
@@ -51,7 +51,7 @@
 your browser does not support the video tag
 </video>
 
-<h3>Tissue pressure: what can be learned computationally from histological slides ? </h3>
+<h3>Tissue Stresses: what can be learned computationally from histological slides ? </h3>
 
 <p> Stresses that arise in tissues either as a product of a disase state or in the development of disease may be seen through the packing of tissue features. </p>
 
