--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ your browser does not support the video tag
 
 <h3>Tissue Stresses: what can be learned computationally from histological slides ? </h3>
 
-<p> Stresses that arise in tissues either as a product of a disase state or in the development of disease may be seen through the packing of tissue features. </p>
+<p> Stresses that arise in tissues either as a product of a disease state or in the development of disease may be seen through the packing of tissue features. </p>
 
 <img src="images/reticulin_nucleus_new_cutoff_0_93_10x_reticulin.png" alt="hi" class="inline" style="max-width:100%;"/>
 
